--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -51,3 +51,36 @@
     cursor: not-allowed;
   }
 }
+
+.container {
+  display: flex;
+  align-items: flex-start;
+
+  flex-basis: 50%;
+}
+
+.recommend_wrap {
+  max-width: 700px;
+
+  .video_list {
+    list-style: none;
+    .video_item {
+      margin-bottom: 20px;
+      a {
+        display: flex;
+        text-decoration: none;
+        color: #161616;
+        column-gap: 20px;
+        img {
+          width: 100px;
+          height: auto;
+        }
+      }
+
+      .video_info {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+}
